--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -56,9 +56,12 @@
 			gap: 1.5rem;
 			padding: 1.45rem 0 1.85rem;
 		}
+		@media (min-width: $md2) {
+			flex-wrap: nowrap;
+		}
 		@media (min-width: $md1) {
 			align-items: center;
-			flex-wrap: nowrap;
+
 			padding: 1.1rem 0 1.85rem;
 		}
 	}
@@ -83,9 +86,11 @@
 			flex-direction: row;
 			order: 1;
 		}
+		@media (min-width: $md2) {
+			order: 0;
+		}
 		@media (min-width: $md1) {
 			margin-left: auto;
-			order: 0;
 		}
 	}
 	// .header__contact
@@ -95,6 +100,7 @@
 		gap: 1em;
 		text-align: right;
 		font-size: 1rem;
+		white-space: nowrap;
 		line-height: math.div(2, 1);
 		@media (min-width: $md3) {
 			font-size: 0.875rem;
@@ -135,6 +141,7 @@
 	}
 	&__dropdown {
 		transition-delay: 550ms !important;
+		align-self: center;
 		@media (max-width: $md5) {
 			display: none;
 		}
@@ -171,7 +178,7 @@
 		align-self: flex-start;
 	}
 	@media (min-width: $md2) {
-		padding: 0 rem(60);
+		padding: 0 rem(50);
 	}
 	// .menu__body
 	&__body {
@@ -295,6 +302,7 @@
 		}
 		gap: 0.75rem;
 		text-align: left;
+
 		font-size: 0.875rem;
 		&:not(:last-child) {
 			margin-bottom: 1.5rem;
