--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -62,6 +62,7 @@ body {
 	font-family: $fontfamily, sans-serif;
 	&.font-raleway {
 		font-family: $font-raleway, sans-serif;
+		font-variant-numeric: lining-nums;
 	}
 	color: #fff;
 	background: #0c1621;
