--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,11 +1,11 @@
 //============ МОДУЛИ ====================
-@import 'modules/popup';
-@import 'modules/breadcrumbs';
-@import 'modules/select';
+@import "modules/popup";
+@import "modules/breadcrumbs";
+@import "modules/select";
 // @import 'modules/range-slider';
-@import 'modules/range-input';
-@import 'modules/animation';
-@import 'modules/before-slider';
+@import "modules/range-input";
+@import "modules/animation";
+@import "modules/before-slider";
 
 //============ МОДУЛИ ====================
 
@@ -102,7 +102,7 @@
 			}
 		}
 		&::after {
-			content: '';
+			content: "";
 			flex: 1 1 auto;
 			width: 100%;
 			height: 1px;
@@ -260,7 +260,7 @@
 				display: block;
 			}
 		}
-		&[aria-disabled='true'] {
+		&[aria-disabled="true"] {
 			pointer-events: none;
 			opacity: 0.5;
 		}
@@ -320,7 +320,7 @@
 
 ._loading {
 	&::after {
-		content: '';
+		content: "";
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -331,7 +331,7 @@
 		z-index: 2;
 	}
 	&::before {
-		content: '';
+		content: "";
 		position: absolute;
 		top: 50%;
 		left: 50%;
@@ -397,7 +397,7 @@
 			color: #fff;
 			border: rem(1) solid #ffeab4;
 		}
-		transition: color 0.3s ease;
+		transition: all 0.3s ease;
 		@media (any-hover: hover) {
 			&:hover {
 				color: #fff;
