--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -374,6 +374,7 @@
 		font-size: rem(14);
 		& span {
 			display: none;
+			pointer-events: none;
 		}
 		@media (min-width: $md4) {
 			font-size: rem(16);
